# 2048

./: CMakeLists.txt  README.md  main.c  run.sh
src/: main.c
